--- a/server/package.json
+++ b/server/package.json
@@ -35,20 +35,27 @@
     "@fastify/static": "6.6.1",
     "axios": "1.2.3",
     "bcrypt": "5.1.0",
+    "better-sqlite3": "^8.0.1",
     "dotenv": "16.0.3",
     "fastify": "4.12.0",
     "fastify-multer": "2.0.3",
     "fastify-plugin": "4.5.0",
     "form-data": "4.0.0",
     "jsonwebtoken": "9.0.0",
-    "knex": "2.4.2",
+    "knex": "^2.4.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.0.1",
+    "node-pg-migrate": "^6.2.2",
     "nodemon": "2.0.20",
     "objection": "3.0.1",
-    "pg": "8.8.0",
+    "oracledb": "^5.5.0",
+    "pg": "^8.9.0",
     "pg-hstore": "2.3.4",
     "qs": "6.11.0",
+    "shared": "file:../shared",
     "socket.io": "4.5.4",
-    "shared": "file:../shared"
+    "sqlite3": "^5.1.4",
+    "tedious": "^15.1.2"
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
